Endret navn og meta før merge

--- a/blueprints/automation/karlalskens_Lysstyring/Automatisk Lysstyring.yaml
+++ b/blueprints/automation/karlalskens_Lysstyring/Automatisk Lysstyring.yaml
@@ -1,10 +1,10 @@
 blueprint:
-  name: Trigger for lysstyring Soldimming2_branch
+  name: Automatisk Lysstyring
   description: >
-    Dette er en automasjon som styrer lys automatisk basert med bevegelsessensorer og dagslys.
+    Dette er en automasjon som styrer lys automatisk basert med bevegelsessensorer, dagslys og nattmodus.
   domain: automation
-  author: Karl Jørgen
-  source_url: https://github.com/karlalskens/Home-Assistant-Lysstyring/blob/dev_soldimming2/blueprints/automation/karlalskens_Lysstyring/Trigger_for_Lysstyring_Soldimming2_branch.yaml
+  author: Karl Jørgen Marthinsen
+  source_url: https://github.com/karlalskens/Home-Assistant-Lysstyring/blob/main/blueprints/automation/karlalskens_Lysstyring/Automatisk Lysstyring.yaml
   homeassistant:
     min_version: '2024.6.4'
   input:
